--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,17 @@
     </properties>
 
     <dependencies>
-        <!--dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
-        </dependency-->
+        </dependency>
         <dependency>
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
             <version>1.10.9</version>
         </dependency>
-        <!--dependency>
+        <dependency>
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.core</artifactId>
             <version>0.8.6</version>
@@ -39,7 +39,7 @@
             <groupId>org.jacoco</groupId>
             <artifactId>org.jacoco.report</artifactId>
             <version>0.8.6</version>
-        </dependency-->
+        </dependency>
     </dependencies>
 
 </project>
